Subsume Utility project into ViewModels

--- a/ViewModels/ViewModels.csproj
+++ b/ViewModels/ViewModels.csproj
@@ -66,13 +66,13 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Utility\Utility.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
         <None Update="App.config">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
     </ItemGroup>
 
 </Project>
