Upgrade to ReactiveUI v8

--- a/ViewModels/ViewModels.csproj
+++ b/ViewModels/ViewModels.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <AssemblyName>Book.ViewModels</AssemblyName>
         <RootNamespace>Book.ViewModels</RootNamespace>
-        <TargetFrameworks>netstandard1.3;net471</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;net471</TargetFrameworks>
         <WarningsAsErrors>true</WarningsAsErrors>
         <LangVersion>latest</LangVersion>
 
@@ -52,8 +52,8 @@
         <PackageReference Include="Microsoft.Reactive.Testing" Version="3.1.1" />
         <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
         <PackageReference Include="PCLMock" Version="5.0.4-alpha" />
-        <PackageReference Include="ReactiveUI" Version="8.0.0-alpha0113" />
-        <PackageReference Include="ReactiveUI.Testing" Version="8.0.0-alpha0113" />
+        <PackageReference Include="ReactiveUI" Version="8.0.0" />
+        <PackageReference Include="ReactiveUI.Testing" Version="8.0.0" />
         <PackageReference Include="System.Collections.Immutable" Version="1.4.0" />
         <PackageReference Include="System.Reactive" Version="3.1.1" />
         <PackageReference Include="System.ValueTuple" Version="4.4.0" />
